# VoiceChange

./: README.md  index.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/voicechange/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  com_example_voicechange_MainActivity.h  native-lib.cpp
app/src/main/java/com/example/voicechange/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
app/src/test/java/com/example/voicechange/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
